--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     //Google Direction API
     implementation 'com.google.maps:google-maps-services:0.9.2'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+    //Support design toolbar
+    implementation 'com.android.support:design:28.0.0'
 
 
 }
