--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     //ClusterMarker dependency
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    //FCM
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    //Retofit Gson Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
 
 
 }
