--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     //Retofit Gson Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
+    //universal image loader
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 
 }
