--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sharencare">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -13,14 +12,14 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".utils.NotifactionChannelAndLocationUpdate"
+        android:name=".utils.NotifactionChannel"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.RideFoundViewFromNotification"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -34,8 +33,8 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".ui.RidesFound"
-            android:label="@string/title_activity_rides_found"></activity>
+            android:name=".ui.RidesFoundShowOnMap"
+            android:label="@string/title_activity_rides_found" />
         <activity android:name=".ui.AvailableRides" />
         <activity android:name=".ui.TripDetailsRider" />
         <activity
