--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.RideFoundViewFromNotification"></activity>
+        <activity android:name=".ui.VehicleNameAndRegistration"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,7 +33,10 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".ui.RidesFoundShowOnMap"
+            android:name=".ui.DriveFoundShowOnMapForRider"
+            android:label="@string/title_activity_rides_found_show_on_map_for_rider" />
+        <activity
+            android:name=".ui.RidesFoundShowOnMapForDriver"
             android:label="@string/title_activity_rides_found" />
         <activity android:name=".ui.AvailableRides" />
         <activity android:name=".ui.TripDetailsRider" />
