--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-    <supports-screens></supports-screens>
+    <supports-screens />
 
     <application
         android:name=".utils.NotifactionChannel"
@@ -22,7 +22,8 @@
         android:roundIcon="@drawable/applogowhite"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.ScheduleTripDriver"></activity>
+        <activity android:name=".ui.OnGoingTripDetails"></activity>
+        <activity android:name=".ui.ScheduleTripDriver" />
         <activity android:name=".ui.VehicleNameAndRegistration" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -70,7 +71,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
