--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:roundIcon="@drawable/applogowhite"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.ScheduleDriveViewRider"></activity>
+        <activity android:name=".ui.AboutUs"></activity>
+        <activity android:name=".ui.ScheduleDriveViewRider" />
         <activity android:name=".ui.ScheduleDriveViewDriver" />
         <activity android:name=".ui.ScheduleTripRequiredDetails" />
         <activity android:name=".ui.OnGoingTripDetails" />
